[MODINVOICE-523] - After resaving the configurations with empty credentials, an NPE occurs during manual export